# aow4-forge

./: .gitignore  LICENSE  README.md  main.py  main.spec  pyproject.toml  todo.txt
src/: automate.py  gui.py
